kustomize/base/hummingbird_jiangok/hummingbird_jiangok-ingress-controller.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: hummingbird-jiangok
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      containers:
        - name: ingress-nginx
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.46.0
          ports:
            - containerPort: 80
